[gd_scene load_steps=6 format=3 uid="uid://dnu8ag3dngqgh"]

[ext_resource type="Script" path="res://enemies/spawners/enemy_spawner_1.gd" id="1_thbab"]
[ext_resource type="AudioStream" uid="uid://cht2e4k8rxsgy" path="res://audio/spawn.wav" id="3_0vt6f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x671y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k0c8h"]
diffuse_mode = 3
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jiq84"]
material = SubResource("StandardMaterial3D_k0c8h")

[node name="enemy_spawner_1" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.17201, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_thbab")

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
shape = SubResource("CapsuleShape3D_x671y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="collider"]
mesh = SubResource("CapsuleMesh_jiq84")

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="wave_timer" type="Timer" parent="."]
wait_time = 15.0

[node name="dmg_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="spawn" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_0vt6f")

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="dmg_timer" to="." method="_on_dmg_timer_timeout"]
